# Multi-Agent-LLM-Orchestration-and-Evaluation-System

./: .env.example  .gitignore  AI_USAGE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  smoke_results.txt  smoke_test.sh
alembic/: env.py
alembic/versions/: 2e72f443f2ca_add_document_chunks.py  4a2bff979df8_add_document_chunks_table.py  6c993add8af3_init.py  f2c100b3c7ca_initial_schema.py
app/: config.py  main.py  streaming.py  worker.py
app/agents/: base.py  compression.py  critique.py  decomposition.py  meta_agent.py  orchestrator.py  prompt_registry.py  rag.py  synthesis.py  tool_persistence.py
app/db/: __init__.py  database.py  models.py  sync_pool.py
app/eval/: baseline.py  runner.py  test_cases.py  trigger.py
app/schemas/: __init__.py  context.py
app/tools/: code_executor.py  data_lookup.py  registry.py  self_reflection.py  web_search.py
client/: demo.html
scripts/: embed_corpus.py  seed_corpus.py
tests/: __init__.py  conftest.py  test_base_agent.py  test_eval_cases.py  test_schemas.py  test_scoring.py  test_streaming.py  test_tools.py
