[project]
name = "mega-ai"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "arxiv>=3.0.0",
    "asyncpg>=0.31.0",
    "celery[redis]>=5.6.3",
    "cohere>=6.1.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langchain-anthropic>=1.4.3",
    "langchain-google-genai>=4.2.2",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "langsmith>=0.8.3",
    "loguru>=0.7.3",
    "openai>=2.36.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.0",
    "pymupdf4llm>=1.27.2.3",
    "sqlalchemy[asyncio]>=2.0.49",
    "sse-starlette>=3.4.2",
    "tenacity>=9.1.4",
    "tiktoken>=0.12.0",
    "uvicorn>=0.46.0",
]
